style.css
.calculator {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 30px;
}

@font-face {
  font-family: "digital-clock-font";
  src: url(./ticking-timebomb-bb.regular.ttf);
}

.grid-container {
  display: grid;
  gap: 12px;
  grid-template-rows: 140px repeat(5, 90px);
  grid-template-columns: repeat(4, 100px);
  background-color: rgb(163, 163, 179);
  border-radius: 25px;
  border: 25px solid rgb(163, 163, 179);
  box-shadow: 2px 2px 3px 1px rgb(58, 58, 99);
}

.display {
  display: flex;
  justify-content: right;
  align-items: center;
  padding-top: 14px;
  padding-right: 10px;
  grid-column: span 4;
  background-color: rgb(176, 185, 175);
  border-radius: 15px;
  border: 2px solid rgb(87, 86, 86);
  text-align: right;
  font-family: "digital-clock-font";
  font-size: 650%;
  margin-bottom: 10px;
}

.clear,
.del,
.negative {
  background-color: bisque;
}

button {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 200%;
  font-weight: 800;
  border-radius: 20px;
  border: 1px solid #4d4c4d;
  box-shadow: 2px 2px #4d4c4c;
}

button:hover {
  cursor: grab;
}

button:active {
  transform: translateY(3px);
  filter: brightness(90%);
}

.operator {
  background-color: orange;
}

#zero {
  grid-column: span 2;
}

.equal {
  background-color: rgb(106, 204, 196);
}

@media (width<500px) {
  .grid-container {
    grid-template-rows: 100px repeat(5, 50px);
    grid-template-columns: repeat(4, 60px);
  }

  .display {
    font-size: 400%;
  }

  button {
    font-size: 150%;
  }
}

/* .pressed {
  box-shadow: 0 0 5px white;
  background-color: grey;
} */

